--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,17 @@ body {
 	width: 100%;
 }
 
+.smoothLink {
+	cursor: pointer;
+}
+
 .navbar {
-	padding: 10px;
+	padding: 15px;
 	border-color: transparent;
 	box-shadow: 0 0px 5px 3px rgba(0, 0, 0, 0.08);
 	backdrop-filter: blur(90px);
 	z-index: 2;
+	border-bottom: '1px solid #bfa25a';
 }
 
 .productContainerScrollBar::-webkit-scrollbar {
@@ -32,4 +37,24 @@ body {
 
 .blackHeading {
 	color: black !important;
+	text-align: center;
+}
+/* width */
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #bfa25a;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
